@@ -8,6 +8,8 @@ Features
 
 * Show the filename of the missing file when ``nikola serve`` can't
   find a file (i.e. when an 404 error occurs).
+* Better error messages for JSON download failures in ``nikola
+  plugin`` and  ``nikola theme`` (Issue getnikola/plugins#282)
 
 Bugfixes
 --------
